<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:myapp="http://schemas.android.com/apk/res/com.unidevel.logo" 
  android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
<!-- <ScrollView android:layout_width="fill_parent" android:scrollbars="vertical" android:layout_height="fill_parent">
<LinearLayout
  android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
   -->
<com.admob.android.ads.AdView android:id="@+id/ad" android:layout_width="fill_parent" android:layout_height="wrap_content" myapp:backgroundColor="#000000" myapp:primaryTextColor="#FFFFFF" myapp:secondaryTextColor="#CCCCCC" /><MultiAutoCompleteTextView android:id="@+id/textScript" android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1"></MultiAutoCompleteTextView>
<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnFD" android:text="@string/btnFD"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btnRT" android:id="@+id/btnRT"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btnREPEAT" android:id="@+id/btnREPEAT"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnQUOTE" android:text="@string/btnQUOTE"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btnLBRACE" android:id="@+id/btnLBRACE"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnRBRACE" android:text="@string/btnRBRACE"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnCOLON" android:text="@string/btnCOLON"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnNL" android:text="@string/btnNL"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnTO" android:text="@string/btnTO"></Button>
</LinearLayout>
<!-- 
</LinearLayout>
</ScrollView>
 -->
</LinearLayout>
